<resources>

    <string name="app_name">Mahdara</string>
    <string name="app_name_arabic">المحظرة</string>
    <string name="basmala">بِسْمِ ٱللَّهِ ٱلرَّحْمَـٰنِ ٱلرَّحِيمِ</string>
    <string name="arkam">٠١٢٣٤٥٦٧٨٩</string>
    <string name="fatiha">
        بِسْمِ ٱللَّهِ ٱلرَّحْمَـٰنِ ٱلرَّحِيمِ ١\n
        ٱلْحَمْدُ لِلَّهِ رَبِّ ٱلْعَـٰلَمِينَ ٢\n
        ٱلرَّحْمَـٰنِ ٱلرَّحِيمِ ٣\n
        مَـٰلِكِ يَوْمِ ٱلدِّينِ ٤\n
        إِيَّاكَ نَعْبُدُ وَإِيَّاكَ نَسْتَعِينُ ٥\n
        ٱهْدِنَا ٱلصِّرَٰطَ ٱلْمُسْتَقِيمَ ٦\n
        صِرَٰطَ ٱلَّذِينَ أَنْعَمْتَ عَلَيْهِمْ غَيْرِ ٱلْمَغْضُوبِ عَلَيْهِمْ وَلَا ٱلضَّآلِّينَ ٧\n
    </string>
    <string name="baramij">برامج</string>
    <string name="malumat">معلومات</string>
    <string name="sourate">السورة</string>
    <string name="ayat">آياتها</string>
    <string name="hizb">الجزء</string>
    <string name="my_link">https://play.google.com/store/apps/dev?id=6030565463004791846</string>
    <string name="positive">التواصل معنا</string>
    <string name="neutral">تقييم أو تحديث التطبيق</string>
    <string name="negative">الرجوع</string>

    <string name="lecteur_1">القارئ محمد شيخنا ولد سيد الحاج (قالون)</string>
    <string name="lecteur_2">القارئ محمد لغظف ولد محمد سيدي (ورش)</string>
    <string name="lecteur_3">القارئ سالم ولد محمد الأمين الداهن (قالون)</string>
    <string name="lecteur_4">القارئ الراجل ولد عثمان (ورش)</string>
    <string name="lecteur_5">القارئ الناجي ولد بلال (قالون)</string>
    <string name="lecteur_6">القارئ سليمان ولد الرباني (ورش)</string>
    <string name="lecteur_7">القارئ خاجيل ولد عبد الرحمن (ورش)</string>

    <string-array name="moujawid">
        <item>القارئ شيخنا ولد سيد الحاج (قالون)</item>
        <item>القارئ محمد لغظف ولد محمد سيدي (ورش)</item>
        <item>القارئ سالم ولد محمد الأمين الداهن (قالون)</item>
        <item>القارئ الراجل ولد عثمان (ورش)</item>
        <item>القارئ الناجي ولد بلال (قالون)</item>
        <item>القارئ سليمان ولد الرباني (ورش)</item>
        <item>القارئ خاجيل ولد عبد الرحمن (ورش)</item>
    </string-array>

    <string name="help_text">
        تطبيق المحظرة يختص بتوفير تلاوة القرآن الكريم بأصوات القراء من بلاد شنقيط. يحتوي على 7 مصاحف صوتية كاملة لأفضل القراء الموريتانيين برفقة النص مع خاصية حركة اللوح تزامنا مع الترتيل.
        \nيمكن استخدامه لقراءة القرآن الكريم والإستماع إليه.
        \nالنص الحالي برواية حفص بينما التلاوة بروايات مختلفة حسب القارئ.
        \nتقبل الله منا ومنكم صالح الأعمال.
        \n
        \nالمطور : الحسن ولد سيدي ماجور
        \n
    </string>
    <string name="cercle_bug">۟</string>
    <string name="note_text">إضغط هنا لرؤية اللوح</string>
    <string name="note_text_prim">إمسح هنا لإيقاف التلاوة</string>
    <string name="exit_text">إضغط مجددا للخروج</string>
    <string name="yes_lawh">تفعيل حركة اللوح</string>
    <string name="no_lawh">إيقاف حركة اللوح</string>
    <string name="no_internet">لا يوجد إنترنت</string>
    <string name="connexion_failed">يتعذر الوصول للبيانات</string>
    <string name="connexion_cancelled">تم إلغاء التشغيل</string>
    <string name="title_home">التلاوة والنص</string>
    <string name="title_person">قائمة القراء</string>
    <string name="title_list">قائمة السور</string>
    <string name="title_search">بحث</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
