<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PersonFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:padding="10dp">

        <TableRow
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:id="@+id/tableLecteur1"
                android:tag="1"
                android:layout_weight="1"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:src="@drawable/lecteur_1" />

                <TextView
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/lecteur_1" />

            </TableLayout>

            <TableLayout
                android:id="@+id/tableLecteur2"
                android:tag="2"
                android:layout_weight="1"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:src="@drawable/lecteur_2" />

                <TextView
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/lecteur_2" />

            </TableLayout>

            <TableLayout
                android:id="@+id/tableLecteur3"
                android:tag="3"
                android:layout_weight="1"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:src="@drawable/lecteur_3" />

                <TextView
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/lecteur_3" />

            </TableLayout>

        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:id="@+id/tableLecteur4"
                android:tag="4"
                android:layout_weight="1"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:src="@drawable/lecteur_4" />

                <TextView
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/lecteur_4" />

            </TableLayout>

            <TableLayout
                android:id="@+id/tableLecteur5"
                android:tag="5"
                android:layout_weight="1"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:src="@drawable/lecteur_5" />

                <TextView
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/lecteur_5" />

            </TableLayout>

            <TableLayout
                android:id="@+id/tableLecteur6"
                android:tag="6"
                android:layout_weight="1"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:src="@drawable/lecteur_6" />

                <TextView
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/lecteur_6" />

            </TableLayout>

        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:tag="1"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </TableLayout>

            <TableLayout
                android:id="@+id/tableLecteur7"
                android:tag="7"
                android:layout_weight="1"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:src="@drawable/lecteur_7" />

                <TextView
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/lecteur_7" />

            </TableLayout>

            <TableLayout
                android:tag="1"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </TableLayout>

        </TableRow>

    </TableLayout>

</FrameLayout>
