<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="#F1F5FB">

        <ImageButton
            android:id="@+id/imageReplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/relativeLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_above="@id/soundLayout"
            android:foregroundGravity="center"
            android:onClick="replaySound"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_replay_black" />

        <ImageButton
            android:id="@+id/imageForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/relativeLayout"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_above="@id/soundLayout"
            android:foregroundGravity="center"
            android:onClick="forwardSound"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_forward_black" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layoutDirection="rtl"
            android:textDirection="rtl"
            android:padding="2dp"
            android:layout_marginBottom="-2dp"
            android:background="@drawable/relative_style"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <ImageButton
                android:id="@+id/imagePrevious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/spinner"
                android:onClick="previousElement"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_previous_black" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:background="@android:color/transparent"
                android:layout_toLeftOf="@id/imageNext"
                android:popupBackground="@drawable/popup_style"
                android:popupTheme="@style/Widget.AppCompat.Light.ListPopupWindow"
                android:minWidth="160dp"
                android:minHeight="45dp" />

            <ImageButton
                android:id="@+id/imageNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_centerVertical="true"
                android:onClick="nextElement"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_next_black" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/soundLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sound_style"
            android:layoutDirection="ltr"
            android:padding="5dp"
            android:layout_below="@id/relativeLayout">

            <SeekBar
                android:id="@+id/seekBar"
                style="@style/Widget.AppCompat.SeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/textEnd"
                android:layout_toEndOf="@id/textStart"
                android:max="1000"
                android:progress="0" />

            <ImageButton
                android:id="@+id/buttonStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:visibility="visible"
                android:onClick="startSound"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_play_black" />

            <ImageButton
                android:id="@+id/buttonPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:visibility="invisible"
                android:onClick="pauseSound"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_pause_black" />

            <TextView
                android:id="@+id/textStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/white"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="--:--" />

            <TextView
                android:id="@+id/textEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/white"
                android:layout_toStartOf="@id/buttonStart"
                android:layout_centerVertical="true"
                android:text="--:--" />

        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/soundLayout"
            android:paddingTop="50dp"
            android:paddingBottom="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_style"
            android:layout_above="@id/adView" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="2sp"
                android:fontFamily="@font/uthmanic_hafs_v20"
                android:text="@string/basmala"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="26sp" />

        </ScrollView>

        <TextView
            android:id="@+id/textVerset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amiri_regular"
            android:lineSpacingExtra="0sp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/soundLayout"
            android:textColor="@android:color/black"
            android:text="@string/ayat" />

        <TextView
            android:id="@+id/textPartie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amiri_regular"
            android:lineSpacingExtra="0sp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/soundLayout"
            android:textColor="@android:color/black"
            android:text="@string/hizb" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-7799975842206135/9634454119"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>